# fastapi_demo

./: pyproject.toml
fastapi_demo/: app.py
